# N3

./: .gitignore  .pre-commit-config.yaml  .pre-commit.config.yaml  CITATION.cff  README.md  bessel_measurer.sh  err.488391  mpi_measurer.sh  mpi_runner.sh  out.488391  pyproject.toml  spiral_measurer.sh  stdout.192175  stdout.247923
mathematica/: LessIsMoreFig2.nb  LessIsMoreFig3.nb  LessIsMoreFig4.nb  LessIsMoreFig5.nb
nbs/: base_bessel_losses.ipynb  bessel_analysis.ipynb  bessel_standard.ipynb  bessel_static.ipynb  prototyping.ipynb  spiral_analysis.ipynb  spiral_standard.ipynb  spiral_static.ipynb
output/: .gitignore
output/BESSEL/: base_losses.csv  control_grad_norms.txt  controls.txt  test_losses.txt  train_losses.txt
output/BESSEL/SEED_0/: base_losses.csv  controls.txt  test_losses.txt  train_losses.txt
output/BESSEL/SEED_1/: base_losses.csv  control_grad_norms.txt  controls.txt  test_losses.txt  train_losses.txt
output/BESSEL/SEED_2/: base_losses.csv  control_grad_norms.txt  controls.txt  test_losses.txt  train_losses.txt
output/BESSEL/SEED_3/: base_losses.csv  controls.txt  test_losses.txt  train_losses.txt
output/BESSEL/SEED_4/: base_losses.csv  control_grad_norms.txt  controls.txt  test_losses.txt  train_losses.txt
output/BESSEL/SEED_5/: base_losses.csv  control_grad_norms.txt  controls.txt  test_losses.txt  train_losses.txt
scripts/: bessel_measurer.sh  bessel_runner.sh  bessel_standard.py  bessel_static.py  simple_bessel_standard.py  simple_bessel_static.py  spiral_runner.sh  spiral_standard.py  spiral_static.py
src/: hello.py
(+90 files in other folders)
